# Corvid

./: .gitignore  .workspace_state.json  ast_chunker.py  code_editor.py  corvid.bat  db_manager.py  llm_manager.py  main.py  prompt.py  pyproject.toml  workspace_manager.py
utils/: json_utils.py
