[project]
name = "corvid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "groq>=1.4.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "sentence-transformers>=5.5.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
]
