[project]
name = "corvid"
version = "0.1.0"
description = "Autonomous local-first full-file code repair agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.1",
    "groq",
    "pydantic>=2.10.0",
    "requests>=2.32.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
]